(dirs tools client assets)

(executables
  (names %%%PROJECT_NAME%%%)
  (modes (byte plugin) (native plugin))
  (libraries eliom.server ocsigen-start.server ocsipersist.%%%PROJECT_DB%%%)
  (preprocess
    (pps
      lwt_ppx
      js_of_ocaml-ppx_deriving_json
      ocsigen-ppx-rpc
      eliom.ppx.server)))

(rule (alias %%%PROJECT_NAME%%%)
  (deps %%%PROJECT_NAME%%%.cma client/%%%PROJECT_NAME%%%.bc client/%%%PROJECT_NAME%%%.bc.js tools/check_modules.ml)
  (action (run ocaml tools/check_modules.ml %%%PROJECT_NAME%%%)))

(env (_ (flags (:standard -w -9-37-39))))
